// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Snapshots renders avatar with default options 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 9999px;
}

.c2 {
  border-radius: 9999px;
}

<div
  className="c0"
>
  <div
    className="c1 w-8 h-8"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        alt="avatar"
        className="c2 rounded-full"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          alt="avatar"
          className="c2 rounded-full"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="100vw"
          src="/_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=3840&q=75"
          srcSet="/_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=3840&q=75 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
</div>
`;

exports[`Avatar Snapshots renders avatar with large size 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 9999px;
}

.c2 {
  border-radius: 9999px;
}

<div
  className="c0"
>
  <div
    className="c1 w-32 h-32"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        alt="avatar"
        className="c2 rounded-full"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          alt="avatar"
          className="c2 rounded-full"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="100vw"
          src="/_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=3840&q=75"
          srcSet="/_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=3840&q=75 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
</div>
`;

exports[`Avatar Snapshots renders avatar with large size 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 9999px;
}

.c2 {
  border-radius: 9999px;
}

<div
  className="c0"
>
  <div
    className="c1 w-32 h-32"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        alt="avatar"
        className="c2 rounded-full"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          alt="avatar"
          className="c2 rounded-full"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="100vw"
          src="/_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=3840&q=75"
          srcSet="/_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=3840&q=75 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
</div>
`;

exports[`Avatar Snapshots renders avatar with middle size 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 9999px;
}

.c2 {
  border-radius: 9999px;
}

<div
  className="c0"
>
  <div
    className="c1 w-8 h-8"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        alt="avatar"
        className="c2 rounded-full"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          alt="avatar"
          className="c2 rounded-full"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="100vw"
          src="/_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=3840&q=75"
          srcSet="/_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=3840&q=75 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
</div>
`;

exports[`Avatar Snapshots renders avatar with small size 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 9999px;
}

.c2 {
  border-radius: 9999px;
}

<div
  className="c0"
>
  <div
    className="c1 w-5 h-5"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        alt="avatar"
        className="c2 rounded-full"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          alt="avatar"
          className="c2 rounded-full"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="100vw"
          src="/_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=3840&q=75"
          srcSet="/_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fstatic.productionready.io%2Fimages%2Fsmiley-cyrus.jpg&w=3840&q=75 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
</div>
`;

exports[`Avatar Snapshots renders avatar with url 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 9999px;
}

.c2 {
  border-radius: 9999px;
}

<div
  className="c0"
>
  <div
    className="c1 w-8 h-8"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        alt="avatar"
        className="c2 rounded-full"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          alt="avatar"
          className="c2 rounded-full"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="100vw"
          src="/_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=3840&q=75"
          srcSet="/_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=640&q=75 640w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=750&q=75 750w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=828&q=75 828w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=3840&q=75 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
</div>
`;

exports[`Avatar Snapshots renders avatar with url and size 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 9999px;
}

.c2 {
  border-radius: 9999px;
}

<div
  className="c0"
>
  <div
    className="c1 w-5 h-5"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        alt="avatar"
        className="c2 rounded-full"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          alt="avatar"
          className="c2 rounded-full"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="100vw"
          src="/_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=3840&q=75"
          srcSet="/_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=640&q=75 640w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=750&q=75 750w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=828&q=75 828w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2Fexample.com%2Fsample.png&w=3840&q=75 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
</div>
`;
